--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=تعذر العثور على السجل.
 the-logout-redirect-url-is-invalid=عنوان URL لإعادة توجيه تسجيل الخروج.
 the-master-page-was-published-successfully=تم نشر الصفحة الرئيسية بنجاح.
 the-maximum-length-is-10-characters=الحد الأقصى للطول 10 حروف.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=تم تجاوز أقصى عدد من الفئات للمفردات.
 the-maximum-number-of-categories-per-vocabulary-is-x=أقصى عدد من الفئات لكل مفردة {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=تم الوصول إلى أقصى عدد مسموح به من عمليات الإرسال لهذا النموذج.
