--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=No s'ha trobat el registre.
 the-logout-redirect-url-is-invalid=L'URL de redireccionament de tancament de sessió no és vàlid.
 the-master-page-was-published-successfully=La pàgina mestra s'ha publicat correctament.
 the-maximum-length-is-10-characters=La llargada màxima és de 10 caràcters.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=S'ha superat el nombre màxim de categories del vocabulari.
 the-maximum-number-of-categories-per-vocabulary-is-x=El nombre màxim de categories per vocabulari és de {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=S'ha assolit el nombre màxim d'enviaments permesos per a aquest formulari.
