--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Das Protokoll konnte nicht gefunden werden.
 the-logout-redirect-url-is-invalid=Die URL zur Weiterleitung nach der Abmeldung ist ungültig.
 the-master-page-was-published-successfully=Die Masterseite wurde erfolgreich veröffentlicht.
 the-maximum-length-is-10-characters=Die maximale Länge beträgt 10 Zeichen.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Die maximale Anzahl der Kategorien für das Vokabular wurde überschritten.
 the-maximum-number-of-categories-per-vocabulary-is-x=Die maximale Anzahl der Kategorien pro Vokabular beträgt {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Die maximale Anzahl zulässiger Einreichungen für dieses Formular wurde errreicht.
