--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Δεν ήταν δυνατή η ανο δυνατότ
 the-logout-redirect-url-is-invalid=Η διεύθυνση URL ανακατεύθυνσης αποσύνδεσης δεν είναι έγκυρη. (Automatic Translation)
 the-master-page-was-published-successfully=The master page was published successfully. (Automatic Copy)
 the-maximum-length-is-10-characters=The maximum length is 10 characters. (Automatic Copy)
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Έχει σημειωθεί υπέρβαση του μέγιστου αριθμού κατηγοριών για το λεξιλόγιο. (Automatic Translation)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Ο μέγιστος αριθμός υποβολών που επιτρέπονται για αυτό το έντυπο έχει επιτευχθεί. (Automatic Translation)
