--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=No se encuentra el registro.
 the-logout-redirect-url-is-invalid=La URL de redireccionamiento de cierre de sesión no es válida.
 the-master-page-was-published-successfully=La página maestra se publicó correctamente.
 the-maximum-length-is-10-characters=La longitud máxima es de 10 caracteres.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Se ha superado el número máximo de categorías para el vocabulario.
 the-maximum-number-of-categories-per-vocabulary-is-x=El número máximo de categorías por vocabulario es de {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Se alcanzó el número máximo de envíos permitidos para este formulario.
