--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Lokia ei löytynyt.
 the-logout-redirect-url-is-invalid=Uloskirjautumisen uudelleenohjaus-URL on virheellinen.
 the-master-page-was-published-successfully=Pääsivu julkaistiin onnistuneesti.
 the-maximum-length-is-10-characters=Enimmäispituus on 10 merkkiä.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Sanaston luokkien enimmäismäärä on ylitetty.
 the-maximum-number-of-categories-per-vocabulary-is-x=Sanaston luokkien enimmäismäärä on {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Tälle lomakkeelle sallittujen lähetysten maksimimäärä on saavutettu.
