--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=A naplóbejegyzés nem található.
 the-logout-redirect-url-is-invalid=A kijelentkezés átirányítási URL-címe érvénytelen.
 the-master-page-was-published-successfully=A mester oldal sikeresen közzétéve.
 the-maximum-length-is-10-characters=A maximális hossz 10 karakter.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Túllépte a szótárra vonatkozó maximális kategóriaszámot.
 the-maximum-number-of-categories-per-vocabulary-is-x=A szótárankénti maximális kategóriaszám {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Elérte az űrlapra engedélyezett beküldések maximális számát.
