--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=そのログは見つかりませんでした。
 the-logout-redirect-url-is-invalid=ログアウトリダイレクト URLが無効です。
 the-master-page-was-published-successfully=マスターページは正常に公開されました。
 the-maximum-length-is-10-characters=フィールドの最大長は 10 文字です。
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=ボキャブラリの最大カテゴリ数を超えました。
 the-maximum-number-of-categories-per-vocabulary-is-x=ボキャブラリごとの最大カテゴリ数は {0} です。
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=このフォームで許可されている最大送信回数に達しました。
