--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Het logboek werd niet gevonden.
 the-logout-redirect-url-is-invalid=De doorverwijs-URL voor het uitloggen is ongeldig.
 the-master-page-was-published-successfully=De bovenliggende pagina werd gepubliceerd.
 the-maximum-length-is-10-characters=De maximale lengte is 10 tekens.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Het maximale aantal categorieën voor de woordenlijst is overschreden.
 the-maximum-number-of-categories-per-vocabulary-is-x=Het maximale aantal categorieën per woordenlijst is {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Het toegestane maximale aantal inzendingen voor dit formulier is bereikt.
