--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=O registro não foi encontrado.
 the-logout-redirect-url-is-invalid=A URL de redirecionamento de logout é inválida.
 the-master-page-was-published-successfully=A página mestra foi publicada com sucesso.
 the-maximum-length-is-10-characters=O comprimento máximo é 10 caracteres.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=O número máximo de categorias para o vocabulário foi excedido.
 the-maximum-number-of-categories-per-vocabulary-is-x=O número máximo de categorias por vocabulário é {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=O número máximo de envios permitidos para este formulário foi atingido.
