--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Det gick inte att hitta loggen.
 the-logout-redirect-url-is-invalid=Omdirigerings-URL för utloggning är ogiltig.
 the-master-page-was-published-successfully=Huvudsidan har publicerats.
 the-maximum-length-is-10-characters=Maximal längd är 10 tecken.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Maximalt antal kategorier för ordlistan har överskridits.
 the-maximum-number-of-categories-per-vocabulary-is-x=Maximalt antal kategorier per ordlista är {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Maximalt antal tillåtna insändningar för det här formuläret har uppnåtts.
