--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=无法找到日志。
 the-logout-redirect-url-is-invalid=退出重定向 URL 无效。
 the-master-page-was-published-successfully=母版页已成功发布。
 the-maximum-length-is-10-characters=最大长度为 10 个字符。
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=已超出词汇的最大类别数。
 the-maximum-number-of-categories-per-vocabulary-is-x=每个词汇的最大类别数为 {0}。
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=已达到此表单的最大提交数。
