--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=找不到 log。
 the-logout-redirect-url-is-invalid=登出重導向 URL 無效。
 the-master-page-was-published-successfully=母版頁已成功發布。
 the-maximum-length-is-10-characters=最大長度為10個字元。
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=已超出詞彙的最大類別數。 (Automatic Translation)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=已達到此表單提交次數之上限
