--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=The log could not be found. (Automatic Copy)
 the-logout-redirect-url-is-invalid=The logout redirect URL is invalid. (Automatic Copy)
 the-master-page-was-published-successfully=The master page was published successfully. (Automatic Copy)
 the-maximum-length-is-10-characters=The maximum length is 10 characters. (Automatic Copy)
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=The maximum number of categories for the vocabulary has been exceeded. (Automatic Copy)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=The maximum number of submissions allowed for this form has been reached. (Automatic Copy)
