--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=لاگ یافت نشد. (Automatic Translation)
 the-logout-redirect-url-is-invalid=URL تغییر مسیر ورود به سیستم غیر معتبر است. (Automatic Translation)
 the-master-page-was-published-successfully=The master page was published successfully. (Automatic Copy)
 the-maximum-length-is-10-characters=The maximum length is 10 characters. (Automatic Copy)
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=بیش ترین تعداد دسته بندی برای واژگان بیش از حد بوده است. (Automatic Translation)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=حداکثر تعداد مطالب ارسالی مجاز برای این فرم رسیده است. (Automatic Translation)
