--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Le journal est introuvable.
 the-logout-redirect-url-is-invalid=L'URL de redirection de déconnexion n'est pas valide.
 the-master-page-was-published-successfully=La page maître a bien été publiée.
 the-maximum-length-is-10-characters=La longueur maximale est de 10 caractères.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Le nombre maximum de catégories pour le vocabulaire a été dépassé.
 the-maximum-number-of-categories-per-vocabulary-is-x=Le nombre maximum de catégories par vocabulaire est de {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Le nombre maximum d'envois autorisés pour ce formulaire a été atteint.
