--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Impossibile trovare il registro. (Automatic Translati
 the-logout-redirect-url-is-invalid=L'URL di reindirizzamento della disconnessione non è valido. (Automatic Translation)
 the-master-page-was-published-successfully=The master page was published successfully. (Automatic Copy)
 the-maximum-length-is-10-characters=The maximum length is 10 characters. (Automatic Copy)
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Il numero massimo di categorie per il vocabolario è stato superato. (Automatic Translation)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=È stato raggiunto il numero massimo di invii consentiti per questo modulo. (Automatic Translation)
