--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=Log tidak dijumpai. (Automatic Translation)
 the-logout-redirect-url-is-invalid=URL penglencongan log keluar tidak sah. (Automatic Translation)
 the-master-page-was-published-successfully=The master page was published successfully. (Automatic Copy)
 the-maximum-length-is-10-characters=The maximum length is 10 characters. (Automatic Copy)
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields. (Automatic Copy)
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=Bilangan maksimum kategori perbendaharaan kata telah melebihi. (Automatic Translation)
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}. (Automatic Copy)
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=Bilangan maksimum penyerahan yang dibenarkan untuk borang ini telah dicapai. (Automatic Translation)
