--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=La imatge seleccionada s'ha suprimit.
 the-selected-image-was-moved-to-the-recycle-bin=La imatge seleccionada s'ha desplaçat a la paperera de reciclatge.
 the-selected-menu-does-not-exist=El menú seleccionat no existeix.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=L'organització que heu seleccionat està associada a usuaris desactivats. Voleu procedir amb l'eliminació d'aquesta organització i dissoldre automàticament l'associació dels usuaris desactivats?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=El pas seleccionat ha fet la transició correctament.
 the-selected-steps-have-transitioned-successfully=Els passos seleccionats han fet la transició correctament.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=El grup d'usuaris seleccionat està associat a usuaris desactivats. Voleu procedir amb l'eliminació d'aquest grup i dissoldre automàticament l'associació dels usuaris desactivats?
