--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=Det markerede billede blev slettet. (Automatic Tr
 the-selected-image-was-moved-to-the-recycle-bin=Det markerede billede blev flyttet til papirkurven. (Automatic Translation)
 the-selected-menu-does-not-exist=Den valgte menu findes ikke. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Den valgte organisation er knyttet til deaktiverede brugere. Vil du fortsætte med at slette den valgte organisation ved automatisk at frakassociere de deaktiverede brugere? (Automatic Translation)
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Det valgte trin er blevet overført. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=De valgte trin er blevet overført. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Den valgte brugergruppe er knyttet til deaktiverede brugere. Vil du fortsætte med at slette den valgte brugergruppe ved automatisk at frak tilknytningen af de deaktiverede brugere? (Automatic Translation)
