--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=選択した画像は削除されました。
 the-selected-image-was-moved-to-the-recycle-bin=選択した画像はゴミ箱に移動されました。
 the-selected-menu-does-not-exist=選択したメニューは存在しません。
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=選択された組織は無効なユーザーと関連付けられています。無効なユーザーとの関連を削除して選択された組織を削除しますか？
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=選択したステップは正常に移行されました。
 the-selected-steps-have-transitioned-successfully=選択したステップは正常に移行されました。
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=選択されたユーザーグループは無効なユーザーと関連付けられています。無効なユーザーを削除してユーザーグループを削除しますか？
