--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=Seçili görüntü silindi. (Automatic Translatio
 the-selected-image-was-moved-to-the-recycle-bin=Seçili görüntü Geri Dönüşüm Kutusu'na taşındı. (Automatic Translation)
 the-selected-menu-does-not-exist=Seçili menü yok. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Seçilen organizasyon etkin olmayan kullanıcılarla ilişkilendirilmiştir. Seçilen organizasyonu silerek etkin olmayan kullanıcılarla otomatik olarak ilişkilendirmeden devam etmek ister misiniz?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Seçili adım başarıyla geçiş yaptı. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Seçili adımlar başarıyla geçiş yaptı. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Seçilen kullanıcı grubu etkin olmayan kullanıcılarla ilişkilendirilmiş. Seçilen kullanıcı grubunu silerek etkin olmayan kullanıcılarla otomatik olarak ilişkilendirmeden devam etmek ister misiniz?
