--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=Ảnh đã chọn đã bị xóa bỏ. (Automatic
 the-selected-image-was-moved-to-the-recycle-bin=Ảnh đã chọn đã được di chuyển vào Thùng Rác. (Automatic Translation)
 the-selected-menu-does-not-exist=Menu đã chọn không tồn tại. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Tổ chức đã chọn còn liên quan đến người sử dụng đã bị vô hiệu hóa. Bạn có muốn tiến hành xóa các tổ chức đã chọn và tự động gỡ liên quan đến những người sử dụng này ?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Bước đã chọn đã chuyển đổi thành công. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Các bước đã chọn đã chuyển đổi thành công. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Nhóm bạn đã chọn có liên quan đến người sử dụng bị vô hiệu hóa. Bạn có muốn tiếp tục xóa các nhóm này và tự động gỡ liên quan với những người sử dụng kia ?
