--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=选定图像已被删除。
 the-selected-image-was-moved-to-the-recycle-bin=选定图像已被移至回收站。
 the-selected-menu-does-not-exist=选定菜单不存在。
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=选定的机构组织与已失活的用户相关联。是否要通过自动取消与已失活的用户的关联来继续删除选定的机构？
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=选定步骤已成功转换。
 the-selected-steps-have-transitioned-successfully=选定步骤已成功转换。
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=选定的用户组与已失活的用户相关联。是否要通过自动取消与已失活的用户的关联来继续删除选定的用户组？
