--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=تم حذف الرسالة المحددة.
 the-selected-image-was-moved-to-the-recycle-bin=تم نقل الرسالة المحددة إلى سلة المحذوفات.
 the-selected-menu-does-not-exist=القائمة المحددة غير موجودة.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=المؤسسة التي تم اختيارها مرتبطة بمستخدمين غير نشطين.هل تريد متابعة حذف المؤسسات التي تم اختيارها بفصل الارتباط بينها وبين المستخدمين غير النشطين تلقائيا؟
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=تم الانتقال بنجاح إلى الخطوة المحددة.
 the-selected-steps-have-transitioned-successfully=تم الانتقال بنجاح إلى الخطوات المحددة.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=مجموعة المستخدمين التي تم اختيارها مرتبطة بمستخدمين غير نشطين.هل تريد متابعة حذف مجموعة المستخدمين التي تم اختيارها بفصل الارتباط بينها وبين المستخدمين غير النشطين تلقائيا؟
