--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=L'image sélectionnée a été supprimée.
 the-selected-image-was-moved-to-the-recycle-bin=L'image sélectionnée a été déplacée vers la corbeille.
 the-selected-menu-does-not-exist=Le menu sélectionné n'existe pas.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=L'organisation choisie est associée aux utilisateurs mis hors tension. Voulez-vous continuer de supprimer l'organisation choisie par unassociating automatiquement les utilisateurs mis hors tension ?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=La transition de l'étape sélectionnée s'est bien passée.
 the-selected-steps-have-transitioned-successfully=Les étapes sélectionnées ont bien eu une transition.
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Le groupe d'utilisateur choisi est associé aux utilisateurs mis hors tension. Voulez-vous continuer de supprimer le groupe d'utilisateur choisi par unassociating automatiquement les utilisateurs mis hors tension ?
