--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=The selected image was deleted. (Automatic Copy)
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin. (Automatic Copy)
 the-selected-menu-does-not-exist=The selected menu does not exist. (Automatic Copy)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=The selected organization is associated with deactivated users. Do you want to proceed with deleting the selected organization by automatically unassociating the deactivated users? (Automatic Copy)
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=The selected step has transitioned successfully. (Automatic Copy)
 the-selected-steps-have-transitioned-successfully=The selected steps have transitioned successfully. (Automatic Copy)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=The selected user group is associated with deactivated users. Do you want to proceed with deleting the selected user group by automatically unassociating the deactivated users? (Automatic Copy)
