--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=Wybrany obraz został usunięty. (Automatic Trans
 the-selected-image-was-moved-to-the-recycle-bin=Wybrany obraz został przeniesiony do Kosza. (Automatic Translation)
 the-selected-menu-does-not-exist=Wybrane menu nie istnieje. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Wybrana organizacja jest skojarzona z wyłączanymi użytkownikami. Czy chcesz kontynuować usuwanie wybranej organizacji przez automatyczne usuniecie skojarzenia z wyłączonymi użytkownikami?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Wybrany krok został pomyślnie przeniesiony. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Wybrane kroki zostały pomyślnie przeniesione. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Wybrana grupa użytkowników jest skojarzona z wyłączanymi użytkownikami. Czy chcesz kontynuować usuwanie wybranej grupy użytkowników przez automatyczne usuniecie skojarzenia z wyłączonymi użytkownikami?
