--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=A imagem selecionada foi excluída. (Automatic Tr
 the-selected-image-was-moved-to-the-recycle-bin=A imagem selecionada foi movida para a Lixeira. (Automatic Translation)
 the-selected-menu-does-not-exist=O menu selecionado não existe. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=A organização selecionada está associada com utilizadores desativados. Você quer prosseguir com a remoção da organização selecionada e automaticamente desassociar os utilizadores desativados?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=A etapa selecionada foi transitada com sucesso. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=As etapas selecionadas foram transicionadas com sucesso. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=O grupo de utilizadores selecionado está associado com utilizadores desativados. Deseja prosseguir com a remoção do grupo de utilizadores selecionado, desassociando os utilizadores desativados automaticamente?
