--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=Imaginea selectată a fost ștearsă. (Automatic 
 the-selected-image-was-moved-to-the-recycle-bin=Imaginea selectată a fost mutată în Coșul de reciclare. (Automatic Translation)
 the-selected-menu-does-not-exist=Meniul selectat nu există. (Automatic Translation)
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=Organizatia selectata este asociata cu utilizatori dezactivati. Doresti sa continui cu stergerea organizatiei selectate prin dezasocierea automata a utilizatorilor dezactivati?
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=Pasul selectat a trecut cu succes. (Automatic Translation)
 the-selected-steps-have-transitioned-successfully=Pașii selectați au făcut tranziția cu succes. (Automatic Translation)
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=Grupul de utlizatori este asociat cu utilizatori dezactivati. Doresti sa continui cu stergerea grupului de utilizator selectat prin dezasocierea automata a utilizatorilor dezactivati?
