--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -4082,7 +4082,7 @@ home-page-url-help=提供您的應用程式首頁的 URL。
 home-page-url-is-invalid=此網站 URL 無效。
 home-page-url-scheme-is-invalid=此網站 URL 協定無效，只有 http 與 https 是允許的。
 home-url=首頁網址
-home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至  /web/guest/home。
+home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至 /web/guest/home。
 hook-plugins=Hook插件
 hostname=主機名稱或 IP 位址
 hours-abbreviation=h
@@ -7156,7 +7156,7 @@ recaptcha-no-script-url=reCAPTCHA No Script URL
 recaptcha-private-key=重啟碼以取得私密鑰
 recaptcha-public-key=重啟碼以取得公開鑰
 recaptcha-script-url=reCAPTCHA Script URL
-recaptcha-verify-url=reCAPTCHA  URL
+recaptcha-verify-url=reCAPTCHA URL
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=您訂閱的資料夾裡的文件已過期。
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=檢視您訂閱的資料夾裡的文件。
 receive-a-notification-when-someone=收到一個通知，當有人...
@@ -9007,8 +9007,8 @@ the-selected-image-was-deleted=所選的圖片已經被刪除。
 the-selected-image-was-moved-to-the-recycle-bin=所選的圖片已經被移至資源回收桶。
 the-selected-menu-does-not-exist=選定的選單不存在。
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=選擇的組織關聯到已撤銷的使用者。您想要繼續刪除選擇的組織由自動地取消關聯到已撤銷的使用者嗎？
-the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one. (Automatic Copy)
-the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected root folder cannot be found. Please select another one. (Automatic Copy)
+the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected root folder is in the Recycle Bin. Please remove it or select another one. (Automatic Copy)
 the-selected-step-has-transitioned-successfully=選定步驟已成功轉換。
 the-selected-steps-have-transitioned-successfully=選定步驟已成功轉換。
 the-selected-user-group-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-user-group-by-automatically-unassociating-the-deactivated-users=選擇的使用者群組關聯到已撤銷的使用者。您想要繼續刪除選擇的使用者群組自動地取消關聯到已撤銷的使用者嗎？
